feat: Add logic for update category by id.
